# lnf-type-system

./: .dir-locals.el  .gitignore  AUTHORS  Makefile.am  NEWS  ProjectHome.md  README  autogen.sh  configure.ac
exampleProgram/: Makefile.am  Makefile.in  exampleProgram.c
include/: Makefile.am  Makefile.in  lnf-logger.h  lnf-object.h  lnf-slice-intl.h  lnf-slice.h  lnf-string-intl.h  lnf-test.h  lnf.h
lnf/: Makefile.am  Makefile.in  lnf.c
project-scripts/: indent-sources.sh  prepare-commit.sh
sample/: Makefile.am  lnf-sample.c  lnf-slice-test.c  lnf-smaple.c  lnf-test.c  lnf-test.h
src/: Makefile.am  lnf-object.c  lnf-slice-intl.c  lnf-slice-test.c  lnf-slice.c  lnf-string-intl.c  lnf-test.c  lnf-type.c  lnf-utils.c  lnf-utils.h  main.c  sample
tests/: Makefile.am  test-slice.c
