#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([hnsproject], [0.0.1], [ryu.insang@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror gnits])
AC_CONFIG_SRCDIR([include/lnf.h])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC_C99

# Initialize Libtool
AC_CONFIG_MACRO_DIR([m4])
AM_PROG_AR
LT_INIT

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 include/Makefile
                 src/Makefile
                 sample/Makefile])

AC_OUTPUT
