# sample app
bin_PROGRAMS = lnf-sample

lnf_sample_CFLAGS = -I$(top_srcdir)/include
lnf_sample_LDADD = $(top_srcdir)/src/liblnftype.la

lnf_sample_SOURCES = \
	lnf-test.c \
	lnf-test.h


# test
#check_PROGRAMS = lnf-slice-test

#lnf_slice_test_SOURCES = \
#	lnf-slice-test.c \
#	lnf-slice-test.h

#TESTS = lnf-slice-test
