lib_LTLIBRARIES = liblnftype.la

liblnftype_la_CFLAGS = -I$(top_srcdir)/include

liblnftype_la_SOURCES = lnf-utils.c \
                        lnf-slice-intl.c \
                        lnf-string-intl.c \
                        lnf-object.c \
                        lnf-slice.c \
                        lnf-test.c
